export class Coordinate {
  constructor(public Latitude: number, public Longitude: number) {}
}
